ResetValuesHandler optimization
Signed-off-by: pizzi80 <paolo@given2.com>